# downscaling

./: .gitignore  README.md  pyproject.toml
datamodule/: chirps_cmip6.py  download_CHIRPS.sh  download_CNRM-CMIP6.sh  prepare_dataset.py  prepare_dataset.sh  view.ipynb
datamodule/climate/: download_data.ipynb
datamodule/rainnet/: dataloader.py  prepare.py  test.ipynb
demo/: bias_downscaling.ipynb  example.ipynb  results.ipynb  train_sr.ipynb  train_vgg.ipynb
model/: __init__.py  module.py  resnet.py  srgan.py  swin2sr.py  unet.py  unet2.py  vgg.py  vit.py
model/components/: cnn_blocks.py  perceptual_loss.py  pos_embed.py
train/: train_swin.py  train_unet.py  train_vit.py
