[tool.poetry]
name = "downscaling"
version = "0.1.0"
description = ""
authors = ["Dilermando Queiroz <dilermando.queiroz@aluno.ufabc.edu.br>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.0"
torchvision = "^0.15.1"
pytorch-lightning = "^2.0.2"
h5py = "^3.8.0"
climate-learn = "^0.0.2"
Cartopy = "^0.21.1"
rioxarray = "^0.14.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
